--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,14 +18,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn" target="_blank">View on GitHub</a>
-      {% endif %}
-        <a href="about:blank" target="_blank" class="btn">Invite to Discord</a>
+        <a href="help.html" target="_blank" class="btn">Invite to Discord</a>
         <a href="about:blank" target="_blank" class="btn">Help</a>
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-      {% endif %}
     </header>
 
     <main id="content" class="main-content" role="main">
