--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,8 +19,8 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="{{ site.github.repository_url }}" class="btn" target="_blank">View on GitHub</a>
-        <a href="help.html" target="_blank" class="btn">Invite to Discord</a>
-        <a href="about:blank" target="_blank" class="btn">Help</a>
+        <a href="about:blank" target="_blank" class="btn">Invite to Discord</a>
+        <a href="about:blank" class="btn">Help</a>
     </header>
 
     <main id="content" class="main-content" role="main">
