--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,7 +20,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         <a href="{{ site.github.repository_url }}" class="btn" target="_blank">View on GitHub</a>
         <a href="about:blank" target="_blank" class="btn">Invite to Discord</a>
-        <a href="about:blank" class="btn">Help</a>
+        <a href="help" class="btn">Help</a>
     </header>
 
     <main id="content" class="main-content" role="main">
